force-app/main/default/objects/litify_pm__Intake__c/fields/Created_By_Unbounce_API__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Unbounce_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks intake records created through the Unbounce Intake API so downstream automations can target only those records.</description>
    <label>Created By Unbounce API</label>
    <type>Checkbox</type>
</CustomField>