force-app/main/default/objects/litify_pm__Intake__c/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Stores the Google Click Identifier sent from Unbounce submissions.</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>