force-app/main/default/objects/litify_pm__Intake__c/fields/Google_Ads_Conversion_Event__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Conversion_Event__c</fullName>
    <description>Stores the Google Ads conversion event mapped from the latest qualifying Intake status change.</description>
    <label>Google Ads Conversion Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>