force-app/main/default/objects/litify_pm__Intake__c/fields/Google_Ads_Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Conversion_Time__c</fullName>
    <description>Stores the timestamp applied when the Intake reaches a Google Ads conversion status.</description>
    <label>Google Ads Conversion Time</label>
    <type>DateTime</type>
</CustomField>