force-app/main/default/objects/litify_pm__Intake__c/fields/Unbounce_Integration_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Unbounce_Integration_Config_Id__c</fullName>
    <description>Stores the Unbounce Integration Config record Id that authenticated and routed this intake.</description>
    <label>Unbounce Integration Config Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>